tests/errors/syntax-error.ice
ICE-1.0.0
sample >= 1.0.0

@app {
    value "missing colon"
}
